src/objects/Term_Date__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Term Dates</relationshipLabel>
        <relationshipName>Term_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Term</fullName>
                </value>
                <value>
                    <fullName>Half Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Term Date</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{mmddyy}-{00}</displayFormat>
        <label>Term Date</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>